fix: CSS alignments

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,7 +17,7 @@
   flex-direction: column;
   width: 80%;
   max-width: 800px;
-  height: 650px;
+  height: 600px;
   padding: 3em;
   border: 2px solid var(pink);
   border-radius: var(red);
