--- a/client/src/components/InputField/InputField.css
+++ b/client/src/components/InputField/InputField.css
@@ -1,3 +1,7 @@
+.h3 {
+  text-align: center;
+}
+
 .input {
   border: none;
   outline: none;
