--- a/client/src/components/Keyboard/Keyboard.css
+++ b/client/src/components/Keyboard/Keyboard.css
@@ -1,3 +1,7 @@
+.h2 {
+  text-align: center;
+}
+
 .keyboard-container {
   display: flex;
   flex-direction: column;
