--- a/client/src/components/WordList/WordList.css
+++ b/client/src/components/WordList/WordList.css
@@ -1,3 +1,7 @@
+.h2 {
+  text-align: center;
+}
+
 .wordlist-container {
   width: 80%;
   margin: 2rem 0;
